<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Generic -->
    <string name="app_name">Min vinlista</string>
    <string name="app_by">by lawi75</string>
    <string name="search_wine">Sök</string>
    <string name="wine_list_name">Min vinlista</string>
    <string name="add_wine_name">Lägg till vin</string>
    <string name="systembolaget_no_hint">Systembolaget nr</string>
    <string name="search">Sök</string>
    <string name="skip">Hoppa över</string>
    <string name="modify_wine_name">Ändra vin</string>    
    <string name="name_hint">Namn</string>
    <string name="country_hint">Land</string>
    <string name="producer_hint">Producent</string>
    <string name="usage_hint">Passar till</string>
    <string name="taste_hint">Smak</string>
    <string name="provider_hint">Leverantör</string>
    <string name="save">Spara</string>
    <string name="cancel">Avbryt</string>
    <string name="ok">OK</string>
    <string name="wine_name">Vin</string>
    <string name="share_on_facebook">Dela</string>
    <string name="rate">Betyg</string>
    <string name="rating">Betygsätt</string>
    <string name="change">Ändra</string>
    <string name="recommend_wine_header">Vintips via Min vinlista för Android</string>
    <string name="recommend_wine">Jag har druckit ett vin som heter</string>
    <string name="recommend_wine1">som jag ger betyg</string>
    <string name="recommend_wine2">av 5</string>
    <string name="about">Om</string>
    <string name="aboutText"></string>
    <string name="aboutIcons">Information som visas gällande viner kommer från www.systembolaget.se. Min vinlista har ingen relation till Systembolaget och Systembolaget har inget ansvar för någon information som visas på Min vinlista. All beställning, köp och utlämning sker från/av/hos Systembolaget.\n\n\nIkonerna som Min vinlista använder sig av kommer från:</string>
    <string name="aboutOxygen">www.oxygen-icons.org</string>
    <string name="aboutVisualpharm">www.visualpharm.com</string>
    <string name="systembolaget">www.systembolaget.se</string>
    <string name="year">Årgång</string>
    <string name="strength">Alkoholhalt</string>
    <string name="price">Pris</string>
    <string name="totalValue">Totalt värde:</string>
    <string name="category">Kategori</string>
    <string name="newStr">Ny...</string>
    <string name="deleteTitle">Ta bort</string>
    <string name="deleteWine">Vill du ta bort %1$s både från listan och källaren?</string>
    <string name="deleteFailed">Det gick inte att ta bort</string>
    <string name="wait">Vänligen vänta...</string>
    <string name="upgrading">Uppdatering pågår, vänligen vänta...</string>
    <string name="sort_list">Sortera/Filtrera listen</string>
    <string name="app_version">Version:</string>
    
    <string name="sortOnName">Namn</string>
    <string name="sortOnRank">Betyg</string>
    <string name="sortOnType">Vinsort</string>
    <string name="sortOnCategory">Kategori</string>
        
    <string name="sortOnNameSub">Sortera på namn fallande</string>
    <string name="sortOnRankSub">Sortera på Betyg fallande</string>
    <string name="sortOnTypeSub">Filtrera på vinsort</string>
    <string name="sortOnCategorySub">Filtrera på Kategori</string>
    
    <string name="wineExist">Du har redan lagt till vin med nummer</string>
    <string name="provideNo">Du måste ange ett nummer</string>
    <string name="pleaseRetry">Vänligen prova igen om några sekunder!</string>
    <string name="facebookPosted">Ditt vintips finns nu på Facebook</string>
    <string name="addToCellar">Lägg till i källaren</string>
    <string name="removeFromCellar">Ta ut från källaren</string>
    
    <!-- Stats -->
    <string name="stats">Statistik</string>
    <string name="statsNow">Det finns %1$s olika viner i listan med ett snittbetyg på %2$s stjärnor</string>
    <string name="cellarStatsNow">Just nu finns det %1$s flaskor i källaren till ett värde av %2$s</string>
    <string name="amount">%1$s st</string>
    
    
    <!-- Number Picker dialog -->
    <string name="donateTitle">Tack!</string>
    <string name="donate">Tack för att du vill hjälpa till att förbättra Min vinlista, välj belopp (SEK) och klicka på donera</string>
    <string name="sek">SEK</string>

    <string name="dialog_set_number">Donera</string>
    <string name="dialog_cancel">Avbryt</string>
    
    <string name="advanced">Avancerat</string>

    <!-- Wine Cellar -->
    <string name="cellar">Vinkällaren</string>
    <string name="add">Lägg till</string>
    <string name="bottles_in_cellar">%1$s flaskor i källaren till ett värde av %2$s</string>
    
    <!-- Reminder -->
    <string name="reminderTitle">Dags att avnjuta %1$s st %2$s</string>
    <string name="reminderNote">De är nu dags att avnjuta de flaskor som du la in i källaren %1$s</string>
    <string name="reminderNote1">på plats %1$s</string>
    
    <!-- Error Messages -->
    <string name="genericParseError">Misslyckades med att hämta information från www.systembolaget.se, var god försök igen</string>
    <string name="missingNoError">Nummer %1$s finns inte hos Systembolaget</string>
    <string name="invalidNoError">%1$s är inte ett giltigt nummer</string>
    
    <!-- Whats new -->
    <string name="whatsnew">Nyheter</string>
    <string name="version110">Version 1.1.0</string>
    <string name="version110msg">Div buggfixar samt bland annat fungerar dela på Facebook nu. Det finns även möjlighet att donera pengar om man tycker applikationen är bra.</string>
    <string name="version20">Version 2.0</string>
    <string name="version20msg">Div buggfixar, en första enkel version av vinkällare samt statistik över dina viner.</string>
    <string name="version201">Version 2.0.1</string>
    <string name="version201msg">Div buggfixar</string>
    <string name="version21">Version 2.1</string>
    <string name="version21msg">Bättre stöd för landskaps vyn samt mindre buggfixar vid sökande av viner</string>
    <string name="version211">Version 2.1.1</string>
    <string name="version211msg">Mindre buggfixar gällande ta bort viner ur listan</string>
    
    
    <!-- App rating -->
    <string name="rating_message">Om du tycker om %1$s så skulle det vara väldigt uppskattat om du tog dig tid att betygsätta den på Google Play. Tack för hjälpen!</string>
    <string name="later">Påminn mig senare</string>
    <string name="nothanx">Nej tack</string>
    
</resources>
