<?xml version="1.0" encoding="utf-8"?> 
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android" 
	android:orientation="vertical" 
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent" 
	android:paddingLeft="10dip">
	
	<TableLayout 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"  
		android:paddingTop="20dip"
		android:stretchColumns="1">			
		
		<TableRow>			
			<ImageView 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" 
				android:background="@drawable/wine" 
				android:scaleType="centerCrop" />
	   		
			<TableLayout 
				android:layout_width="fill_parent" 
				android:layout_height="fill_parent"  
				android:stretchColumns="1">			
			
				<TableRow>
					<TextView
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
					    android:singleLine="true"
					    android:text="@string/app_name"
					    android:textSize="38sp"
					    android:textStyle="bold" />
				</TableRow>
			    			
				<TableRow>
					<TextView
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
					    android:layout_gravity="right"
					    android:singleLine="true"
					    android:text="@string/app_by"
					    android:textSize="10sp" />
				</TableRow>
			</TableLayout>		
		</TableRow>

		<TableRow>
			
			<TextView 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="10dip"
				android:layout_span="2" 
				android:text="@string/aboutText" />	
		</TableRow>

		<TableRow>
			<TextView 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:autoLink="web"
				android:paddingLeft="10dip"
				android:layout_span="2" 
				android:text="@string/systembolaget" />	
		</TableRow>
		
		<TableRow>
			<TextView 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="10dip"
				android:layout_span="2" 
				android:text="@string/aboutIcons" />	
		</TableRow>
		
		<TableRow>
			
			<TextView 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:autoLink="web"
				android:paddingLeft="10dip"
				android:layout_span="2" 
				android:text="@string/aboutOxygen" />	
		</TableRow>

		<TableRow>
			<TextView 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:autoLink="web"
				android:paddingLeft="10dip"
				android:layout_span="2" 
				android:text="@string/aboutVisualpharm" />	
		</TableRow>

	</TableLayout>
		
	<ScrollView
	    android:layout_width="wrap_content"
		android:layout_height="wrap_content"
	    >
			<TextView 
			    android:id="@+id/eula"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:padding="10dip"				
			    /> 
	    	    
	</ScrollView>		
</LinearLayout> 